# sky_day_21

./: .gitignore  pyproject.toml
day_21/: get.py  index_of.py  slice.py
tests/: test_get.py  test_index_of.py  test_slice.py
